--- a/Bookify.Web2/appsettings.json
+++ b/Bookify.Web2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Bookify.Web2-96A0C414-AA0E-4D8B-BC82-5E82A14C35E1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=;Database=;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
